// Vitest Snapshot v1

exports[`VelgUttaksalder > Gitt at brukeren er på mobil > viser riktig label, ikon og antall knapper når brukeren ønsker å se flere aldere 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_4ca3e3"
  >
    <div
      class="_wrapperCard_4ca3e3"
    >
      <span
        class="_pin_4ca3e3"
      />
      <h2
        class="navds-heading navds-heading--xsmall"
      >
        Når vil du ta ut alderspensjon?
      </h2>
      <ul
        class="navds-chips _chipsWrapper_4ca3e3 _chipsWrapper__hasGap_4ca3e3 navds-chips--medium navds-body-short navds-body-short--small"
      >
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              62 år og 10 md.
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              63 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              64 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              65 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              66 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              67 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              68 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              69 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              70 år
            </span>
          </button>
        </li>
      </ul>
      <button
        class="_visFlereAldere_4ca3e3 navds-button navds-button--tertiary navds-button--xsmall"
      >
        <span
          class="navds-button__icon"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="navds-label navds-label--small"
        >
          Vis flere aldere
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VelgUttaksalder > Gitt at brukeren er på mobil > viser riktig label, ikon og antall knapper når brukeren ønsker å se flere aldere 2`] = `
<DocumentFragment>
  <div
    class="_wrapper_4ca3e3"
  >
    <div
      class="_wrapperCard_4ca3e3"
    >
      <span
        class="_pin_4ca3e3"
      />
      <h2
        class="navds-heading navds-heading--xsmall"
      >
        Når vil du ta ut alderspensjon?
      </h2>
      <ul
        class="navds-chips _chipsWrapper_4ca3e3 _chipsWrapper__hasGap_4ca3e3 navds-chips--medium navds-body-short navds-body-short--small"
      >
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              62 år og 10 md.
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              63 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              64 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              65 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              66 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              67 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              68 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              69 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              70 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              71 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              72 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              73 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              74 år
            </span>
          </button>
        </li>
        <li>
          <button
            aria-pressed="false"
            class="navds-chips__chip navds-chips__toggle navds-chips__toggle--action"
          >
            <span
              class="navds-chips__chip-text"
            >
              75 år
            </span>
          </button>
        </li>
      </ul>
      <button
        class="_visFlereAldere_4ca3e3 navds-button navds-button--tertiary navds-button--xsmall"
      >
        <span
          class="navds-button__icon"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11.47 7.97a.75.75 0 0 1 1.06 0l5.5 5.5a.75.75 0 1 1-1.06 1.06L12 9.56l-4.97 4.97a.75.75 0 0 1-1.06-1.06l5.5-5.5Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="navds-label navds-label--small"
        >
          Vis færre aldere
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
